# nova

./: .gitmodules  .travis.yml  CMakeLists.txt  Main.cpp  PolyStatic.cpp  PolyStatic.hpp  PolyStatic.hxx  README.md
sample/: main.stardust  stardust.json
src/: CMakeLists.txt  Dust.cpp  Dust.hpp  Main.cpp  main.cpp  nova.cpp  stardust-c.cpp
src/god/: God.hpp
src/stardust/: Dust.hpp
